deploy/traefik_k8s/traefik-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080

---
apiVersion: traefik.containo.us/v1alpha1
kind: Ingress
metadata:
  name: traefik-web-route
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: HOST(`traefik.fileserver.com`)
    - kind: Rule
    - services:
        - name: traefik-admin
        - port: web
#  rules:
#  - host: traefik.fileserver.com
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: traefik-web-ui
#          servicePort: web
